Added project page

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -7,12 +7,11 @@
 </head>
 
 <body>
-    {{> header}}
-
-    <p>This is my About page</p>
+    {{>header}}
+    <p> Welcome to my Projects page </p>
 
     {{> footer}}
 
 </body>
 
-</html?>
+</html>
